// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> Snapshots when color is cr-blue should render correctly 1`] = `
<div
  className="vd-loader emotion-0"
  data-testid="loading-spinner"
/>
`;

exports[`<Spinner /> Snapshots when empty props should render correctly 1`] = `
<div
  className="vd-loader css-btry7x-Spinner"
  data-testid="loading-spinner"
/>
`;

exports[`<Spinner /> Snapshots when size is xlarge should render correctly 1`] = `
.emotion-0 {
  width: 1.75rem;
  height: 1.75rem;
}

<div
  className="vd-loader emotion-0"
  data-testid="loading-spinner"
/>
`;
